new changes in website

--- a/html-folder/home.html
+++ b/html-folder/home.html
@@ -40,7 +40,7 @@
                         <li class="nav-item dropdown" onmouseover="showDropdown()" onmouseout="hideDropdown()">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Course Catalog
+                                Courses
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="java.html">Java</a>
@@ -52,7 +52,7 @@
                                 <a class="dropdown-item" href="sql.html">SQL</a>
                                 <a class="dropdown-item" href="android.html">Android development</a>
                                 <a class="dropdown-item" href="GitHub.html">GitHub</a>
-                                <a class="dropdown-item" href="iconicHybrid.html">Iconic Hybrid</a>
+                                <a class="dropdown-item" href="ionicHybrid.html">Iconic Hybrid</a>
                                 <a class="dropdown-item" href="devops.html">DEVOPS</a>
                                 <a class="dropdown-item" href="cybersecurity.html">Cybersecurity</a>
                                 <a class="dropdown-item" href="microsoftpower.html">Microsoft Power</a>
@@ -449,7 +449,7 @@
         </div>
     </section>
 
-    <section class="carousel-second">
+    <!-- <section class="carousel-second">
         <div class="container text-center mt-3 mb-5">
             <div class="row mt-3 mb-3">
                 <div class="col-md-12 col-12">
@@ -496,12 +496,12 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section>
         <div class="container">
             <div class="row mt-3">
-                <div class="col-lg-1"></div>
+                <div class="col-lg-0"></div>
                 <div class="col-lg-4 mt-3 mb-3 text-center">
                     <div class="demo-class">
                         <form id="" action="https://formsubmit.co/0d9d0d6d55b0a580b48ab488a57b4b93" method="POST">
@@ -521,11 +521,11 @@
                     </div>
                 </div>
                 <div class="col-lg-1"></div>
-                <div class="col-lg-6 mt-3 mb-3">
+                <div class="col-lg-7 mt-3 mb-3">
                     <h4 class="text-primary"> Office location</h4>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.1389727982096!2d77.57674171086957!3d13.026820813611725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae17bbe308bc23%3A0x914d4d95aac2da1!2sTechnohub%20Trainings!5e0!3m2!1sen!2sin!4v1691157585576!5m2!1sen!2sin"
-                        width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        width="100%"  style="border:0; height:85%;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
