--- a/html-folder/powerbi.html
+++ b/html-folder/powerbi.html
@@ -65,7 +65,7 @@
                         <li class="nav-item dropdown" onmouseover="showDropdown()" onmouseout="hideDropdown()">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Course Catalog
+                                Courses
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="java.html">Java</a>
@@ -95,20 +95,14 @@
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact US</a>
                         </li>
-                        <!-- <li class="nav-item">
-                            <span> <input type="text" name="search" placeholder="what do you want learn?"
-                                    required="required" /></span>
-                            <span> <input class="btn btn-primary" id="start-search" type="submit" value="Search" />
-                            </span>
-                        </li> -->
                     </ul>
                 </div>
             </nav>
         </div>
     </section>
 
-    <section class="python-banner">
-        <div class="container-fluid">
+    <section class="">
+        <div class="">
             <img src="/img/Microsoft Power BI Data Analyst.png" alt="" class="img-fluid" width="100%">
         </div>
     </section>
