--- a/html-folder/react.html
+++ b/html-folder/react.html
@@ -63,7 +63,7 @@
                         <li class="nav-item dropdown" onmouseover="showDropdown()" onmouseout="hideDropdown()">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Course Catalog
+                                Courses
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="java.html">Java</a>
@@ -99,8 +99,8 @@
         </div>
     </section>
 
-    <section class="python-banner">
-        <div class="container-fluid">
+    <section class="">
+        <div class="">
             <img src="/img/reactjs.jpg" alt="" class="img-fluid" width="100%">
         </div>
     </section>
