--- a/html-folder/contact.html
+++ b/html-folder/contact.html
@@ -42,7 +42,7 @@
                         <li class="nav-item dropdown" onmouseover="showDropdown()" onmouseout="hideDropdown()">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Course Catalog
+                                Courses
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="java.html">Java</a>
@@ -54,7 +54,7 @@
                                 <a class="dropdown-item" href="sql.html">SQL</a>
                                 <a class="dropdown-item" href="android.html">Android development</a>
                                 <a class="dropdown-item" href="GitHub.html">GitHub</a>
-                                <a class="dropdown-item" href="iconicHybrid.html">Iconic Hybrid</a>
+                                <a class="dropdown-item" href="ionicHybrid.html">Iconic Hybrid</a>
                                 <a class="dropdown-item" href="devops.html">DEVOPS</a>
                                 <a class="dropdown-item" href="cybersecurity.html">Cybersecurity</a>
                                 <a class="dropdown-item" href="microsoftpower.html">Microsoft Power</a>
