--- a/html-folder/devops.html
+++ b/html-folder/devops.html
@@ -65,7 +65,7 @@
                         <li class="nav-item dropdown" onmouseover="showDropdown()" onmouseout="hideDropdown()">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Course Catalog
+                                Courses
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="java.html">Java</a>
@@ -77,7 +77,7 @@
                                 <a class="dropdown-item" href="sql.html">SQL</a>
                                 <a class="dropdown-item" href="android.html">Android development</a>
                                 <a class="dropdown-item" href="GitHub.html">GitHub</a>
-                                <a class="dropdown-item" href="iconicHybrid.html">Iconic Hybrid</a>
+                                <a class="dropdown-item" href="ionicHybrid.html">Iconic Hybrid</a>
                                 <a class="dropdown-item" href="devops.html">DEVOPS</a>
                                 <a class="dropdown-item" href="cybersecurity.html">Cybersecurity</a>
                                 <a class="dropdown-item" href="microsoftpower.html">Microsoft Power</a>
@@ -101,8 +101,8 @@
         </div>
     </section>
 
-    <section class="python-banner">
-        <div class="container-fluid">
+    <section class="">
+        <div class="">
             <img src="/img/devOps.png" alt="" class="img-fluid" width="100%">
         </div>
     </section>
