--- a/searching.html
+++ b/searching.html
@@ -1,154 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bootstrap Navbar Example</title>
-  <!-- Include Bootstrap CSS -->
-  <link rel="stylesheet" href="path/to/bootstrap.min.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Sign Up Form</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    /* margin: 0;
+    padding: 0; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+  .signup-container {
+    background-color:#007bff;
+    padding: 20px;
+    border-radius: 15px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    width: 350px;
+    height: 45vh;
+  }
+
+  .signup-container h2 {
+    text-align: center;
+  }
+
+  input[type="text"], input[type="password"], input[type="email"] {
+    width: 93%;
+    padding: 10px;
+    margin-top: 15px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+  }
+  button {
+    width: 150px;
+    padding: 10px;
+    margin-top: 10px;
+    background-color: white;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    margin-left: 30%;
+    font-weight: 500;
+    font-size: 16px;
+  }
+</style>
 </head>
-
 <body>
-  <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Brand</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </nav> -->
-
-  <section style="background-color: #f0f8ff;">
-    <div class="container mt-4">
-        <div class="row">
-            <div class="col-lg-12">
-                <h2 class="mt-4 mb-4 text-primary text-center" style="font-weight: bold;"> Why Training Courses from
-                    Technohub</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-4 mb-4">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title text-primary" id="exampleModalLabel">
-                            <picture><img width="40" height="40" alt="Live Interactive Learning"
-                                    title="Live Interactive Learning" fullbase="true" loading="lazy"
-                                    src="https://d1jnx9ba8s6j9r.cloudfront.net/img/live_intr_live.webp">
-                            </picture>
-                            Live Interactive Learning
-                        </h5>
-                    </div>
-                    <div class="modal-body">
-                        <ol style="list-style-type:disc;">
-                            <li> World class Instructor</li>
-                            <li> Expert-led mentoring sessions</li>
-                            <li> Instant doubts clearing</li>
-                        </ol>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 mb-4">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title text-primary" id="exampleModalLabel">
-                            <picture><img width="40" height="40" fullbase="true" alt="Lifetime Access"
-                                    title="Lifetime Access" loading="lazy"
-                                    src="https://d1jnx9ba8s6j9r.cloudfront.net/img/live_intr_life.webp"></picture>
-                            Life Time Access
-                        </h5>
-                    </div>
-                    <div class="modal-body">
-                        <ol style="list-style-type:disc;">
-                            <li> Course access never expires</li>
-                            <li> Free access to future updates</li>
-                            <li> Unlimited to course content</li>
-                        </ol>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 mb-4">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title text-primary" id="exampleModalLabel">
-                            <picture><img width="40" height="40" alt="24x7 Support" title="24x7 Support"
-                                    fullbase="true" loading="lazy"
-                                    src="https://d1jnx9ba8s6j9r.cloudfront.net/img/live_intr_247.webp"></picture>
-                            Support
-                        </h5>
-                    </div>
-                    <div class="modal-body">
-                        <ol style="list-style-type:disc;">
-                            <li> one-on-one Learning Assistance</li>
-                            <li> Help desk support</li>
-                            <li> Resolve doubts in realtime</li>
-                        </ol>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-lg-4 mb-4">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title text-primary" id="exampleModalLabel">
-                            <picture><img width="40" height="40" fullbase="true"
-                                    alt="Hands-On Project Based Learning" title="Hands-On Project Based Learning"
-                                    loading="lazy"
-                                    src="https://d1jnx9ba8s6j9r.cloudfront.net/img/live_intr_handson.webp">
-                            </picture>
-                            Hands-on Project Based Learning
-                        </h5>
-                    </div>
-                    <div class="modal-body">
-                        <ol style="list-style-type:disc;">
-                            <li> Industry relevent projects</li>
-                            <li> Course demo dataset & files</li>
-                            <li> Quizzes & Assignments</li>
-                        </ol>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 mb-4">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title text-primary" id="exampleModalLabel">
-                            <picture> <img width="40" height="40" fullbase="true"
-                                    alt="Industry Recognised Certification"
-                                    title="Industry Recognised Certification" loading="lazy"
-                                    src="https://d1jnx9ba8s6j9r.cloudfront.net/img/live_intr_certi.webp"></picture>
-                            Industry Recognised Certification
-                        </h5>
-                    </div>
-                    <div class="modal-body">
-                        <ol style="list-style-type:disc;">
-                            <li> Technohub Training certificate</li>
-                            <li> Graded performance certificate</li>
-                            <li> Certificate of completion</li>
-                        </ol>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-  <!-- Include Bootstrap JS and jQuery -->
-  <script src="path/to/jquery.min.js"></script>
-  <script src="path/to/bootstrap.min.js"></script>
+  <div class="signup-container">
+    <h2 style="align-items: center;">Sign Up</h2>
+    <form action="#" method="post">
+      <input type="text" name="username" placeholder="Username" required>
+      <input type="email" name="email" placeholder="Email" required>
+      <input type="password" name="password" placeholder="Password" required>
+      <button type="submit">Sign Up</button>
+    </form>
+  </div>
 </body>
-
 </html>
